# pkdealer

./: .gitignore  CARGO_DENY_QUICKSTART.md  Cargo.toml  DEVLOG.md  Makefile  PHASE1.md  PROJECT_README.md  README.md  SUBPROJECTS_ADDED.md  WORKFLOW_CHANGES.md  WORKSPACE_COMMANDS.md  demo  deny.toml
.claude/: settings.local.json
.github/: BADGES.md  WORKFLOWS.md
.github/workflows/: CI.yaml  audit.yml  workspace-check.yaml
crates/pkdealer_client/: Cargo.toml  README.md
crates/pkdealer_client/examples/: audit.rs  demo.rs
crates/pkdealer_client/src/: main.rs
crates/pkdealer_proto/: Cargo.toml  README.md  build.rs
crates/pkdealer_proto/proto/: dealer.proto
crates/pkdealer_proto/src/: lib.rs
crates/pkdealer_service/: Cargo.toml  README.md
crates/pkdealer_service/src/: main.rs
crates/pkdealer_service/tests/: e2e_ping.rs  e2e_two_players.rs
docs/: EPIC-20_Autonomous_Game_Loop.md  EPIC-21_Spectator.md  EPIC-22_OTel.md  EPIC-23_Bot_Agents.md  EPIC-24_Demo.md
docs/notes/: CARGO_DENY_QUICKSTART.md  DOC_TEST_FIX.md  GPL_LICENSE_COMPATIBILITY.md  POSSIBLE_ARCHITECTURES.md  PROJECT_README.md  QUICK_REFERENCE.md
