[workspace]
members = [
    "crates/pkdealer_service",
    "crates/pkdealer_client",
    "crates/pkdealer_proto",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ImperialBower/pkgrpc"