[package]
name = "pkdealer_client"
version = "0.1.0"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
description = "gRPC client for poker dealer service"
repository = "https://github.com/ImperialBower/pkgrpc"
keywords = ["poker", "grpc", "dealer", "client"]
categories = ["games"]
rust-version = "1.85.0"

[[bin]]
name = "pkdealer_client"
path = "src/main.rs"

[dependencies]
