[package]
name = "pkdealer_client"
version = "0.1.0"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
description = "gRPC client for poker dealer service"
repository = "https://github.com/ImperialBower/pkgrpc"
keywords = ["poker", "grpc", "dealer", "client"]
categories = ["games"]
rust-version = "1.94.0"

[[bin]]
name = "pkdealer_client"
path = "src/main.rs"

[dependencies]
pkdealer_proto = { version = "0.1.0", path = "../pkdealer_proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
