[package]
name = "pkdealer_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC client for poker dealer service"
keywords = ["poker", "grpc", "dealer", "client"]
categories = ["games"]
rust-version = "1.94.0"

[[bin]]
name = "pkdealer_client"
path = "src/main.rs"

[dependencies]
pkdealer_proto = { version = "0.1.1", path = "../pkdealer_proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
