[package]
name = "pkdealer_proto"
version = "0.1.0"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
description = "Shared protobuf definitions and generated Rust types for pkdealer"
repository = "https://github.com/ImperialBower/pkgrpc"
keywords = ["poker", "grpc", "protobuf", "proto"]
categories = ["games"]
rust-version = "1.85.0"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
indexmap = { version = "=2.12.1", features = ["rayon"] }
pkcore = { version = "=0.0.17", git = "https://github.com/ImperialBower/pkcore", rev = "363b8866ff819c7eaf1409dc0bd496fc303b79b5" }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12"


[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
