[package]
name = "pkdealer_proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared protobuf definitions and generated Rust types for pkdealer"
keywords = ["poker", "grpc", "protobuf", "proto"]
categories = ["games"]
rust-version = "1.85.0"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
indexmap = { version = "=2.12.1", features = ["rayon"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12"


[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
