[package]
name = "pkdealer_service"
version = "0.1.0"
edition = "2024"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
license = "GPL-3.0-or-later"
description = "gRPC service for poker dealer functionality"
repository = "https://github.com/ImperialBower/pkgrpc"
keywords = ["poker", "grpc", "dealer", "service"]
categories = ["games"]
rust-version = "1.94.0"

[[bin]]
name = "pkdealer_service"
path = "src/main.rs"

[dependencies]
pkcore = "0.0.28"
pkdealer_proto = { version = "0.1.0", path = "../pkdealer_proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
