[package]
name = "pkdealer_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC service for poker dealer functionality"
keywords = ["poker", "grpc", "dealer", "service"]
categories = ["games"]
rust-version = "1.94.0"

[[bin]]
name = "pkdealer_service"
path = "src/main.rs"

[dependencies]
pkcore = "0.0.39"
pkdealer_proto = { version = "0.1.1", path = "../pkdealer_proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
